hphp/hack/test/typecheck/reified_generics/enforceable_targ_new.php.exp
File "enforceable_targ_new.php", line 10, characters 9-19:
Invalid type (Typing[4302])
  File "enforceable_targ_new.php", line 7, characters 27-28:
  Type parameter `Tc` was declared `__Enforceable` here
  File "enforceable_targ_new.php", line 10, characters 9-19:
  This type is not enforceable because it has a type with an erased generic type argument
